--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 .container {
-  width: 80%;
+  width: 60%;
   margin: 0 auto;
   padding: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   position: relative;
 }
 
@@ -45,22 +45,6 @@
 #prev:hover,
 #next:hover {
   background: rgba(0, 0, 0, 0.5);
-}
-
-.dots {
-  text-align: center;
-  margin-top: 2%;
-}
-
-.dot {
-  display: inline-block;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  /* transition from one do to the next */
-  transition: background-color 0.6s ease;
 }
 
 /* We create this class with JavaScript. It makes the current dot darker gray */
