--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
 .container {
   width: 60%;
   margin: 0 auto;
@@ -97,4 +104,13 @@
   transform: rotate(45deg);
   vertical-align: top;
   width: 0.45em;
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+  }
 }
